<resources>
    <string name="app_name">Shield Security</string>

    <string name="base_url">http://0.0.0.0:8080/</string>
    <string name="preference_file_key">IOHertz</string>
    <string name="home">Home</string>
    <string name="managesystems">Manage Places</string>
    <string name="managedevices">Manage Devices</string>
    <string name="switchsystems">Switch Places</string>
    <string name="voicemail">Voicemail</string>
    <string name="contactus">Contact Us</string>
    <string name="logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Shield Knight</item>
        <item>Shield Vision</item>
        <item>Users</item>
        <item>History</item>
        <item>Contact Us</item>
    </string-array>

    <string name="bell">DoorBell</string>
    <string name="log">History</string>
    <string name="users">Users</string>
    <string name="invite">Invite</string>

    <string name="add_user">Add User</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_system_name">Place Name</string>
    <string name="hint_device_name">Device Name</string>
    <string name="hint_validity">Validity</string>

    <string name="add_system">Add Place</string>
    <string name="hint_device_id">Device ID</string>
    <string name="add_device">Add Device</string>

    <string name="login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="sign_up">Signup</string>

    <string name="lock">DoorLock</string>

    <string name="bell_text">Press the button below to \nview front door</string>
    <string name="door_locked">Press the button below to \nUNLOCK the door</string>
    <string name="door_unlocked">Press the button below to \nLOCK the door</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
