<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24px" />

    <item android:id="@+id/action_lock"
        android:title="@string/lock"
        android:icon="@drawable/ic_lock_outline_black_24dp" />

    <item android:id="@+id/action_bell"
        android:title="@string/bell"
        android:icon="@drawable/ic_videocam_black_24dp" />

    <item android:id="@+id/action_user"
        android:title="@string/users"
        android:icon="@drawable/ic_people_black_24px" />

    <item android:id="@+id/action_log"
        android:title="@string/log"
        android:icon="@drawable/ic_event_note_black_24px" />
</menu>